header spacing fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,6 @@ font-family: 'Montserrat', sans-serif;
 
 */
 
-
 * {
   padding: 0;
   margin: 0;
@@ -88,14 +87,20 @@ h6 {
 
 /*   Header Content START  */
 
+header {
+  background-color: #8D0F23;
+  width: 100%;
+}
+
 .header-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 110px 110px 110px 110px 110px 110px 110px 1fr 1fr;
+  width: 850px;
+  margin: auto;
+  grid-template-columns: 1fr 1fr auto 1fr;
   grid-template-rows: 145px 145px;
   grid-template-areas:
-  "a a a b b c c c c c e e"
-  "a a a x x d d d d d e e";
-  background-color: #8D0F23;
+  "a b c d"
+  "a x e d";
 }
 
 .header-logo {
@@ -112,7 +117,7 @@ h6 {
   letter-spacing: .75px;
 }
 .header-subline {
-  grid-area: d;
+  grid-area: e;
   background-color: none;
   margin-top: 10px;
   letter-spacing: .5px;
